# minegauler

./: .bumpversion.cfg  .coveragerc  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .pyinstaller_main.py  .pylintrc  CHANGELOG.md  CHANGELOG.txt  Features.txt  Manifest.in  MineGauler.spec  MineGaulerCLI.spec  README.md  README.pypi.md  __main__.py  create_images.py  cython_setup.py  data.txt  design.md  enc_setup.py  minegauler.spec  minesweeper9.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-remote.txt  requirements.txt  run-tests  run.bat  run.py  run.sh  server.py  settings.cfg  setup.bat  setup.py  setup.sh  simplex.txt  update_highscores.py  venv
.github/: codecov.yml
.github/workflows/: basic-test.yml  codecov.yml  deploy.yml  full-test.yml  pypi-upload.yml  release.yml  test-pypi.yml  test.yml  workflow.yml
0.0/: Features.txt  minesweeper9.py  setup.py  update_highscores.py
0.0/oldversions/: Settings.txt  minesweeper.py  minesweeper2.pyw  minesweeper3.pyw  minesweeper4.pyw  minesweeper5.py  minesweeper6.py  minesweeper7.py  minesweeper8.pyw  setup.py
1.0/files/: README.txt  about.txt  data.txt  datacopy.txt  settings.txt
1.0/source/: game.py  main.py  main01.pyw  probabilities.pyw  setup.py  source.pyproj  source.sln  update_highscores.py
1.1/: Version history.txt  setup.bat
1.1/data/: data.txt  databackupTue Dec 22 23.29.38 2015.txt  datacopy.txt
1.1/files/: about.txt  features.txt  info.txt
1.1/homeMineGauler1.1.3/: Version history.txt
1.1/source/: main.pyw  main.pywc  probabilities.pyw  resources_old.py  update_highscores.py
1.2/: Version history.txt  settings.cfg
1.2/data/: data.txt
1.2/files/: features.txt  rules.txt  tips.txt
1.2/src/: constants.py  formulas.py  game.py  generate_probs.py  main.pyw  probabilities.pyw  resources.py  update_highscores.py
boards/saved/: b 11Jul2016 21.11.mgb  dense mines.mgb  edge.mgb  edgeb.mgb  square.mgb
bot/: __init__.py  formatter.py  msgparse.py  routes.py  utils.py
cli/: __main__.py  cli.yaml  parser.py
data/: data.txt  datacopy.txt  highscores.json  highscores_copy.json
docs/: bot-UI.md  design.md  git-cmds.md  solver-design.md  split-cell.md  testing.md
encrypted_src/: DO_NOT_EDIT.py  cli.py  cli_entry.py  decryptor.pyd  gui.py  main.py  minefield.py  utils.py
encrypted_src/solver/: __init__.py  probabilities.py  simulator.py
encrypted_src/testing/: __init__.py  dummies.py
files/: README.txt  about.txt  features.txt  info.json  info.txt  rules.txt  tips.txt
helpers/: legacy_highscores.py
images/faces/: active1face.ppm  active2face.ppm  active3face.ppm  lost1face.ppm  ready1face.ppm  ready2face.ppm  ready3face.ppm  won1face.ppm  won2face.ppm  won3face.ppm
minegauler/: README.txt  __init__.py  __main__.py  _version.py  api.py  callback_core.py  minefield.py  paths.py  types.py  typing.py  utils.py
minegauler/app/: __main__.py  settings.cfg
minegauler/backend/: __init__.py  game_engine.py  minefield.py  utils.py
minegauler/boards/: sample.mgb
minegauler/bot/: __init__.py  __main__.py  formatter.py  msgparse.py  routes.py  users.json  utils.py
minegauler/cli/: __init__.py  __main__.py  cli.yaml
minegauler/core/: __init__.py  api.py  board.py  callbacks.py  controller.py  create.py  engine.py  game.py  game_engine.py  game_logic.py  grid.py  highscores.py  internal_types.py  minefield.py  stubs.py  types.py  utils.py
minegauler/data/: highscores.db
minegauler/files/: about.txt  features.txt  rules.txt  tips.txt
minegauler/frontend/: __init__.py  api.py  highscores.py  main_window.py  minefield.py  minefield_widgets.py  panel.py  panel_widgets.py  simulate.py  state.py  utils.py
minegauler/gui/: __init__.py  __main__.py  app.py  main_window.py  minefield_widget.py  panel_widget.py  stubs.py  utils.py
minegauler/highscores/: __init__.py  base.py  mysql.py  sqlite.py
minegauler/server/: README.md  __init__.py  __main__.py
minegauler/shared/: __init__.py  enums.py  grid.py  highscores.py  internal_types.py  types.py  utils.py
minegauler/solver/: __init__.py  find_groups.c  gen_probs.py  group_probs.py  logic.py  probabilities.py  utils.py
oldversions/: create_images.py  minesweeper.py  minesweeper2.pyw  minesweeper3.pyw  minesweeper4.pyw  minesweeper5.py  minesweeper6.py  minesweeper7.py  minesweeper8.pyw  setup.py
oldversions/Beginner/: highscores.txt  highscores6.txt  highscores6archive.txt  highscorescopy.txt
oldversions/Expert/: highscores6.txt
package/: .pyinstaller_bot.py  .pyinstaller_main.py  README.txt.template  minegauler-bot.spec  minegauler.spec  windows_wrapper_script.bat
remote/: server.py
remote/bot/: msgparse.py
scripts/: create_release.py  highscore_db_stats.py  legacy_highscores.py
server/: __init__.py  __main__.py  utils.py
server/bot/: __init__.py  __main__.py  format.py  formatter.py  msgparse.py  routes.py  utils.py
server/test/: utils.py
split_cells/: __main__.py  board.py  coord.py  game.py  minefield.py  types.py
src/: cli.py  cli_entry.py  constants.py  cython_setup.py  game.py  gui.py  gui.pyw  highscores.py  main.py  main.pyw  minefield.py  resources.py  simulator.py  solver.py  test.csv  utils.py
src/Testing/: dummies.py
src/server/: __main__.py
src/solver/: gen_probs.pyd  gen_probs.pyx  probabilities.py
src/utils/: grid.py  utils.py
src2/: constants.py  game.py  game_old.py  generate_probs_old.py  gui.py  highscore_utils.py  main.pyw  main_old.pyw  probabilities.py  test.py  utils.py
tests/: __init__.py  __main__.py  conftest.py  requirements_test.py  utils.py
tests/it/: __init__.py  benchmark_test.py  conftest.py  integration_test.py  old_integration_test.py
tests/mut/: __init__.py  __main__.py  (+5 more)
timings/: minefield.py
version9/: Settings.txt
(+186 files in other folders)
