# BUILD
# =====

[build-system]
requires = [
    "setuptools @ git+https://github.com/pypa/setuptools@experimental/support-pyproject",
    "wheel",
]
build-backend = "setuptools.build_meta"


# PROJECT METADATA
# ================

[project]
name = "minegauler"
version = "4.3.1"
description = "A clone of the original minesweeper game with many added features"
readme = "README.pypi.md"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
keywords = ["minesweeper", "gui", "pyqt5", "game"]
authors = [
    {name = "Lewis Gaul", email = "minegauler@gmail.com"}
]
maintainers = [
    {name = "Lewis Gaul", email = "minegauler@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Topic :: Games/Entertainment :: Puzzle Games"
]
dependencies = [
    "attrs",
    "PyQt5",
    "requests",
]
optional-dependencies = [
    {test = ["pytest", "pytest-cov"]}
]

[project.urls]
homepage = "github.com/LewisGaul/minegauler/"
issues = "github.com/LewisGaul/minegauler/issues/"
changelog = "github.com/LewisGaul/minegauler/issues/blob/main/CHANGELOG.md"
background = "https://www.lewisgaul.co.uk/blog/coding/2020/02/12/minegauler/"

[project.scripts]
minegauler-bot = "minegauler.cli"

[project.gui-scripts]
minegauler = "minegauler.app"


# TOOLS
# =====

[tool.black]
line-length = 88
target-version = ['py37']
exclude = '.*venv.*|_vendor'

[tool.isort]
# Make compatible with Black
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
# Other options
order_by_type = true
lines_after_imports = 2
skip_glob = ['*/_vendor/*', '*venv*/*']
